# quantus-alpha

./: blue_green_test.sh  .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.batch  README.md  batch-deploy.sh  celerybeat-schedule  deploy-service.sh  deploy.sh  docker-compose.batch.yml  docker-compose.es.yml  docker-compose.local.yml  docker-compose.monitoring.yml  docker-compose.yml  docker-compose.yml.old  gunicorn_config.py  nginx.conf  parquet.sh  pyproject.toml  screener_init.py  service-deploy.sh  test_stream_simple.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_form.yml
.github/workflows/: ci.yml  deploy.yml  deploy_dev.yml  deploy_prod.yml
alembic/: env.py
alembic/data_schema/: alembic.ini  env.py
alembic/service_schema/: alembic.ini  env.py
alembic/versions/: 01939b7841d3_v32.py  19dad30b8ced_v32.py  2073080435c9_v30.py  343cfdbf0819_v16.py  36f57fe68763_v12.py  39144b24c2df_v1.py  3d60e5ff91d1_create_stock_trend_table.py  5b109e7dcf82_upgrade_stock_trend_add_column_change_.py  6de92f63bde8_v34.py  7e73ac7acaa2_v15.py  86386d4872b2_v11.py  8653c716c593_v4.py  93d6f26d41c3_v7.py  98ba7a92469a_v42.py  9ebe31bade74_v6.py  9ffc758b8388_v13.py  a18dd721f2f6_v20.py  a581c3fc98ca_v10.py  af578dd20a44_v28.py  b4c6b8fef696_v47.py  bba4a210e33c_v51.py  bd4225441716_v50.py  ca6e44131e51_v49.py  d8624691b048_v29.py  d9fd9008fff5_.py  f3a06c92eed3_v31.py  f581b6f1cf5f_create_stock_price_table.py  f5a07089793f_v18.py  ff900c578387_v26.py
app/: celery_worker.py  exceptions.py  main.py  metrics.py
app/api/: routers.py  v1.py  v2.py
app/batches/: check_outliers.py  check_split.py  check_stock_status.py  old_run_news.py  run_community.py  run_disclosure.py  run_dividend.py  run_etf_price.py  run_etf_screener.py  run_expiration.py  run_kr_etf_holdings.py  run_kr_stock_minute.py  run_news.py  run_stock_indices.py  run_stock_trend.py  run_update_kr_ticker.py  run_us_etf_holdings.py
app/cache/: cache_decorator.py  factors.py  leaderboard.py  story_view.py
app/common/: celery_config.py  constants.py  directories.py  email_configs.py  mapping.py  translation.py
app/core/: config.py  dependencies.py  elasticsearch.py  redis.py
app/crontab/: reset_leaderboard.py  update_stock_parquet.py
app/database/: async_crud.py  conn.py  crud.py
app/elasticsearch/: elasticsearch.py  elasticsearch_service.py  query_examples.py
app/enum/: financial.py  type.py
app/kispy/: api.py  manager.py  sdk.py
app/middlewares/: monitoring.py  rate_limiter.py  rate_limiter_admin.py  slack_error.py  tracing.py  trusted_hosts.py  worker_timeout_tracker.py
app/models/: __init__.py  models_alphafinder_community.py  models_base.py  models_chat.py  models_community.py  models_disclosure.py  models_dividend.py  models_etf.py  models_factors.py  models_news.py  models_payments.py  models_quantus_chat.py  models_screener.py  models_stock.py  models_stock_indices.py  models_stock_trend.py  models_users.py
app/monitoring/: __init__.py  batch_metrics.py  endpoints.py  metrics.py  middleware.py  router.py  tracing.py  web_metrics.py
app/utils/: activate_utils.py  crontab_utils.py  ctry_utils.py  data_utils.py  date_utils.py  dividend_utils.py  email_queue_utils.py  email_utils.py  etf_utils.py  factor_utils.py  image_utils.py  kispy_utils.py  krx.py  markdown_to_pdf_utils.py  s3_utils.py  (+9 more)
blackbox/: blackbox.yml
docs/: logger_guide.md  rate_limiting.md
monitoring/: docker-compose.monitoring.yml
prometheus/: prometheus.yml
reports/: 삼성전자의_주가_전망_report.html  엔비디아_전망에_대해_알려줘_report.html  한국_석유산업수출입_전망은?_report.html  한국_수출입_전망은?_report.html  한국_자동차_수출입_전망은?_report.html
scripts/: batch-deploy.sh  blue_green_test.sh  deploy.sh  dev.sh  prometheus_manager.sh  service-deploy.sh
static/: kr_etf_factors.parquet  stock_us_info.csv  summary_kr.parquet  summary_us.parquet  us_etf_factors.parquet
test/: screener.py
tests/: debug_fastapi.py  debug_llm_client.py  test_app.py  test_chat_router.py  test_dummy.py  test_email.py  test_markdown_to_pdf.py  test_stream.py
(+301 files in other folders)
