[tool.poetry]
name = "quantus-alpha"
version = "0.1.0"
description = ""
authors = ["EthanStoa <ethanklocked@stoa-investment.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pandas = "^2.2.3"
pyarrow = "^17.0.0"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
boto3 = "^1.35.42"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ["F403","F405","E501","E402","B904"]
line-length = 122
