[tool.poetry]
name = "quantus-alpha"
version = "0.1.0"
description = ""
authors = ["EthanStoa <ethanklocked@stoa-investment.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12.2,<3.13"
uvicorn = "^0.32.0"
pandas = "^2.2.3"
pyarrow = "19.0.0"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
boto3 = "^1.35.42"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
aiomysql = "^0.2.0"
greenlet = "^3.1.1"
seaborn = "^0.13.2"
yfinance = "^0.2.36"
pykrx = "^1.0.48"
alembic = "^1.14.0"
sse-starlette = "^2.1.3"
celery = "^5.4.0"
redis = "^5.2.1"
amqp = "^5.3.1"
pydantic = "^2.10.4"
fastapi = "^0.115.6"
exchange-calendars = "^4.6"
kispy = {git = "https://github.com/zeroam/kispy"}
scipy = "^1.15.1"
pytz = "^2025.1"
numpy = "^2.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
google-auth-oauthlib = "^1.2.1"
google-auth = "^2.38.0"
python-multipart = "^0.0.20"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
requests-html = "^0.10.0"
pyodbc = "^5.2.0"
prometheus-client = "^0.21.1"
psutil = "^5.9.8"
aio-pika = "^9.4.0"
notion-client = "^2.3.0"
tenacity = "^8.2.3"
markdown2 = "^2.4.10"
weasyprint = "^62.0"

# OpenTelemetry 의존성 추가
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-exporter-zipkin = "^1.25.0"
opentelemetry-instrumentation-sqlalchemy = "^0.48b0"
opentelemetry-instrumentation-mysql = "^0.48b0"        # MySQL 추적
opentelemetry-instrumentation-pymysql = "^0.48b0"      # PyMySQL 추적
opentelemetry-instrumentation-requests = "0.48b0"

# Elasticsearch 의존성 추가
elasticsearch = "^8.11.0"
aiohttp = ">=3.9.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ["F403","F405","E501","E402","B904"]
line-length = 122
